# lockbee

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  lock_motor.c  lock_motor.h  main.c  tmc2209.c  tmc2209.h  touch.c  touch.h  zigbee.c  zigbee.h
z2m/: lockbee_converter.js  lockbee_converter.mjs
