idf_component_register(
    SRCS
        "main.c"
        "tmc2209.c"
        "lock_motor.c"
        "zigbee.c"
        "touch.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        driver
        esp_timer
        console
        log
        nvs_flash
        app_update
        espressif__esp-zigbee-lib
)
